Fixed a warning in the console telling me that the Parallax component needed to have a parent with relative, static or absolute positioning so that scroll location could be calculated, despite me giving the components container relative this warning only went away when I gave the <html> a position of relative, so I will need to consider this should any unexpected behaviour arise later. Additionally, navigation on mobile is still causing strange behaviour I cannot find documented elsewhere, I will keep digging into it and if not try and rebuild the navigation agagain piece by piece.

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   html {
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
+    position: relative;
   }
   body {
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont,
